[package]
name = "storystains"
version = "0.1.0"
authors = ["Sky Brewer"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "stroystains"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"