[package]
name = "storystains"
version = "0.1.0"
authors = ["Sky Brewer"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "storystains"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
config = "0.13.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-actix-web = "0.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
unicode-segmentation = "1"
validator = "0.14"
slug = "0.1.4"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "1"
fake = "2.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
claim = "0.5"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"