[package]
name = "storystains"
version = "0.1.0"
authors = ["Sky Brewer"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "storystains"

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_json = "1"
config = "0.13.0"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-actix-web = "0.6.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.17.3"
opentelemetry = { version = "0.17.0", features = ["metrics"] }
opentelemetry-jaeger = "0.16"
opentelemetry-prometheus = { version = "0.10" }
prometheus = { version = "0.13", default-features = false }
actix-web-opentelemetry = { version = "0.12.0", features = ["metrics"] }
unicode-segmentation = "1"
validator = "0.15"
slug = "0.1.4"
thiserror = "1"
anyhow = "1"
regex = "1.5.6"
once_cell = "1.12.0"
base64 = "0.13"
argon2 = { version = "0.4.0", features = ["std"] }
rand = { version = "0.8", features = ["std_rng"] }
actix-web-lab = "0.16"
actix-session = { version = "0.7.0", features = ["redis-rs-tls-session"] }
actix-cors = "0.6.1"
actix-web-httpauth = "0.6.0"
actix-files = "0.6.0"
strum = "0.24"
strum_macros = "0.24.0"
futures-lite = "1.12.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]

[dev-dependencies]
once_cell = "1"
fake = "2.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
claim = "0.5"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
rusty-hook = "0.11.2"
